--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "discord-logs": "^1.7.7",
-    "discord.js": "^12.2.0"
+    "discord.js": "^12.2.0",
+    "node-fetch": ">=2.6.1"
   }
 }
